--- a/css/site.css
+++ b/css/site.css
@@ -1,1 +1,107 @@
-/* You can override this file with your own styles */
+/* Font face declarations */
+@font-face {
+    font-family: "BloomreachSans";
+    src: url("https://new-bloomreach-bloomreach-web.vercel.app/fonts/BloomreachSans/BloomreachSans-Thin.otf");
+    font-weight: 100;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "BloomreachSans";
+    src: url("https://new-bloomreach-bloomreach-web.vercel.app/fonts/BloomreachSans/BloomreachSans-Light.otf");
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "BloomreachSans";
+    src: url("https://new-bloomreach-bloomreach-web.vercel.app/css/fonts/BloomreachSans-Regular.woff2");
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "BloomreachSans";
+    src: url("https://new-bloomreach-bloomreach-web.vercel.app/css/fonts/BloomreachSans-Medium.woff2");
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "BloomreachSans";
+    src: url("https://new-bloomreach-bloomreach-web.vercel.app/fonts/BloomreachSans/BloomreachSans-Bold.otf");
+    font-weight: 700;
+    font-style: normal;
+}
+
+/* Basic typography */
+html {
+    font-size: 62.5%; /* 1rem = 10px for easy calculations */
+    font-family: "BloomreachSans", sans-serif;
+}
+
+body {
+    font-family: "BloomreachSans", sans-serif;
+    font-size: 1.6rem; /* Default 16px font size */
+    font-weight: 400;
+}
+
+/* Headings */
+h1 {
+    font-size: 3.4rem; /* 34px */
+    font-weight: 500; /* Bold */
+    line-height: 1.2; /* 120% */
+    font-family: "BloomreachSans", sans-serif;
+}
+
+h2 {
+    font-size: 2.8rem; /* 28px */
+    font-weight: 500; /* Medium */
+    line-height: 1.3;
+    font-family: "BloomreachSans", sans-serif;
+}
+
+h3 {
+    font-size: 2.4rem; /* 24px */
+    font-weight: 500; /* Medium */
+    line-height: 1.3;
+    font-family: "BloomreachSans", sans-serif;
+}
+
+h4 {
+    font-size: 2rem; /* 20px */
+    font-weight: 500; /* Regular */
+    line-height: 1.4;
+    font-family: "BloomreachSans", sans-serif;
+}
+
+h5 {
+    font-size: 1.6rem; /* 16px */
+    line-height: 1.5;
+    font-weight: 500; /* Regular */
+    font-family: "BloomreachSans", sans-serif;
+}
+
+/* Paragraphs and links */
+p, a, li, table {
+    font-size: 1.5rem; /* 15px */
+    line-height: 1.6; /* 160% */
+    font-weight: 400; /* Regular */
+    font-family: "BloomreachSans", sans-serif;
+}
+
+/* Small text */
+small {
+    font-size: 1.2rem; /* 12px */
+    font-weight: 300; /* Light */
+    font-family: "BloomreachSans", sans-serif;
+}
+
+tt {
+    font-family: "Courier New", Courier, monospace;
+    font-size: 1.4rem;
+    background-color: rgba(245, 245, 245, 0.6);
+    padding: 0.1rem 0.2rem;
+    border-radius: 4px;
+    color: #333;
+}
